--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3.0", features = ["derive"] }
+clap = { version = "4.3.0", features = ["derive"], optional = true }
 dashmap = "5.4.0"
 tokio = { version = "1", features = ["full"] }
+
+[features]
+default = ["cli"]
+cli = ["clap"]
+
