Declare license inside Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "paggo"
-license = ""
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 description = "A simple database server implementation."
