updated Cargo.toml description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "paggo"
 license = "MIT"
 version = "0.1.0"
 edition = "2021"
-description = "A simple database server implementation."
+description = "A small, fast, and safe in-memory database."
 authors = ["Joshua Benfield"]
 homepage = "https://github.com/devhsoj/paggo"
 repository = "https://github.com/devhsoj/paggo"
